@@ -3,6 +3,11 @@ Revision history for Mandel
 0.02
        * Add Mandel::Collection::save()
        * Add Mandel::Document::contains()
+       * Add Mandel::connect(), remove ::uri()
+       * Add Mandel::model_class()
+       * Add Mandel::storage(), remove ::mango()
+       * Add builders for attributes, which makes it easier to customize in
+         subclass.
 
 0.01     Fri Sep 27 18:55:40 2013
        * Released alpha software
